--- a/newExcelInput/newExcelInput.vcxproj.filters
+++ b/newExcelInput/newExcelInput.vcxproj.filters
@@ -149,5 +149,8 @@
     <ClInclude Include="StyleWrite.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="CheckStyle.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
