--- a/newExcelInput/newExcelInput.vcxproj.filters
+++ b/newExcelInput/newExcelInput.vcxproj.filters
@@ -146,5 +146,11 @@
     <ClInclude Include="excel_style.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="CheckStyle.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="StyleWrite.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
